navbar height on mobile too short solved

--- a/_assets/stylesheets/_navbar.sass
+++ b/_assets/stylesheets/_navbar.sass
@@ -1,6 +1,10 @@
 .navbar-custom.navbar-hackathon
   background-color: rgba(156,9,35,0.9)
 
+.navbar-fixed-top
+  .navbar-collapse
+    max-height: 355px
+
 .page-scroll.disabled
   opacity: 0.1
 
